--- a/hivemind/tavern/test_condenser_api_patterns.tavern.yaml
+++ b/hivemind/tavern/test_condenser_api_patterns.tavern.yaml
@@ -91,7 +91,7 @@
   marks:
     - patterntest
     - failing
-    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout/last_update
+    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout
 
   includes:
     - !include common.yaml
@@ -122,7 +122,7 @@
   marks:
     - patterntest
     - failing
-    - xfail # last_payout/last_update
+    - xfail # last_payout
 
   includes:
     - !include common.yaml
@@ -153,7 +153,7 @@
   marks:
     - patterntest
     - failing
-    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout/last_update; created for pow account
+    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout; created for pow account
 
   includes:
     - !include common.yaml
@@ -276,8 +276,6 @@
 
   marks:
     - patterntest
-    - failing
-    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout/last_update
 
   includes:
     - !include common.yaml
@@ -397,7 +395,7 @@
   marks:
     - patterntest
     - failing
-    - xfail # last_payout/last_update
+    - xfail # last_payout
 
   includes:
     - !include common.yaml
@@ -428,7 +426,7 @@
   marks:
     - patterntest
     - failing
-    - xfail # last_payout/last_update
+    - xfail # last_payout
 
   includes:
     - !include common.yaml
@@ -459,7 +457,7 @@
   marks:
     - patterntest
     - failing
-    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout/last_update
+    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout
 
   includes:
     - !include common.yaml
@@ -548,7 +546,7 @@
   marks:
     - patterntest
     - failing
-    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout/last_update
+    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout
 
   includes:
     - !include common.yaml
@@ -694,8 +692,6 @@
 
   marks:
     - patterntest
-    - failing
-    - xfail # percent/time wrong for vote with rshares=0 (possibly same problem as in edited votes)
 
   includes:
     - !include common.yaml
