--- a/hivemind/tavern/test_tags_api_patterns.tavern.yaml
+++ b/hivemind/tavern/test_tags_api_patterns.tavern.yaml
@@ -4,7 +4,7 @@
   marks:
     - patterntest
     - failing
-    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout/last_update
+    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout
 
   includes:
     - !include common.yaml
@@ -35,7 +35,7 @@
   marks:
     - patterntest
     - failing
-    - xfail # last_payout/last_update
+    - xfail # last_payout
 
   includes:
     - !include common.yaml
@@ -127,8 +127,6 @@
 
   marks:
     - patterntest
-    - failing
-    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout/last_update
 
   includes:
     - !include common.yaml
@@ -219,7 +217,7 @@
   marks:
     - patterntest
     - failing
-    - xfail # last_payout/last_update
+    - xfail # last_payout
 
   includes:
     - !include common.yaml
@@ -250,7 +248,7 @@
   marks:
     - patterntest
     - failing
-    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout/last_update
+    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout
 
   includes:
     - !include common.yaml
