--- a/hivemind/tavern/test_condenser_api_patterns.tavern.yaml
+++ b/hivemind/tavern/test_condenser_api_patterns.tavern.yaml
@@ -91,7 +91,7 @@
   marks:
     - patterntest
     - failing
-    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout
+    - xfail # last_payout
 
   includes:
     - !include common.yaml
@@ -153,7 +153,7 @@
   marks:
     - patterntest
     - failing
-    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout; created for pow account
+    - xfail # last_payout; created for pow account
 
   includes:
     - !include common.yaml
@@ -457,7 +457,7 @@
   marks:
     - patterntest
     - failing
-    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout
+    - xfail # last_payout
 
   includes:
     - !include common.yaml
@@ -546,7 +546,7 @@
   marks:
     - patterntest
     - failing
-    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout
+    - xfail # last_payout
 
   includes:
     - !include common.yaml
