--- a/hivemind/tavern/test_tags_api_patterns.tavern.yaml
+++ b/hivemind/tavern/test_tags_api_patterns.tavern.yaml
@@ -4,7 +4,7 @@
   marks:
     - patterntest
     - failing
-    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout
+    - xfail # last_payout
 
   includes:
     - !include common.yaml
@@ -248,7 +248,7 @@
   marks:
     - patterntest
     - failing
-    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout
+    - xfail # last_payout
 
   includes:
     - !include common.yaml
