jsondiff changed to deepdiff
- jsondiff has a bug/feature: if you compare not empty json object with
  empty json object it will show no difference. Comparing empty with not
  empty will show difference
- jsondiff its not actively maintained (last commit 11 months ago)

--- a/hivemind/tavern/test_database_api_patterns.tavern.yaml
+++ b/hivemind/tavern/test_database_api_patterns.tavern.yaml
@@ -28,6 +28,7 @@
           extra_kwargs:
             method: "list_comments"
             directory: "database_api_patterns"
+            ignore_tags: ["id"]
 
 ---
   test_name: Hivemind database_api.find_comments patterns test
@@ -59,3 +60,4 @@
           extra_kwargs:
             method: "find_comments"
             directory: "database_api_patterns"
+            ignore_tags: ["id", "post_id"]
