--- a/hivemind/tavern/test_database_api_patterns.tavern.yaml
+++ b/hivemind/tavern/test_database_api_patterns.tavern.yaml
@@ -51,7 +51,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "database_api.find_comments"
-          params: {"start":[["steemit","firstpost"]], "limit":10, "order":"by_author"}
+          params: {"comments":[["steemit","firstpost"]]}
       response:
         status_code: 200
         verify_response_with:
