--- a/hivemind/tavern/test_bridge_api_patterns.tavern.yaml
+++ b/hivemind/tavern/test_bridge_api_patterns.tavern.yaml
@@ -215,6 +215,8 @@
 
   marks:
     - patterntest
+    - failing
+    - xfail # no results (underlying functionality is not working)
 
   includes:
     - !include common.yaml
@@ -244,6 +246,8 @@
 
   marks:
     - patterntest
+    - failing
+    - xfail # no results (underlying functionality is not working)
 
   includes:
     - !include common.yaml
@@ -363,9 +367,7 @@
   test_name: Hivemind bridge_api.list_communities patterns test
 
   marks:
-    - patterntest
-    - failing
-    - xfail
+    - patterntest # no nonempty result possible for 5mln set
 
   includes:
     - !include common.yaml
